--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Portafolio</h1>
-        <h2></h2>
+        <h1>Portafolio Personal</h1>
+        <h2>Ing.Emmanuel Román Santibáñez - Backend Developer</h2>
         <a href="https://github.com/EmmanuelRoman/Portafolio" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
