Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
           <h3>
 <a id="habilidades" class="anchor" href="#habilidades" aria-hidden="true"><span class="octicon octicon-link"></span></a>HABILIDADES</h3>
 
-<p>*** Planeación y diagramación**</p>
+<p><strong>Planeación y diagramación</strong></p>
 
 <pre><code>* * HTML5
 * * CSS3
 * * Responsive Design
 </code></pre>
 
-<p>*** Programación Front-End**</p>
+<p><strong>Programación Front-End</strong></p>
 
 <pre><code>* * Javascript
 * * jQuery
 * * AngularJS
 </code></pre>
 
-<p>*** Programación Back-End**</p>
+<p><strong>Programación Back-End</strong></p>
 
 <pre><code>* * Python - Django
 </code></pre>
