--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="habilidades" class="anchor" href="#habilidades" aria-hidden="true"><span class="octicon octicon-link"></span></a>HABILIDADES</h3>
+<a id="habilidades" class="anchor" href="#habilidades" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>HABILIDADES</strong>
+</h3>
 
 <p><strong>Planeación y diagramación</strong></p>
 
